--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="{{ asset('vendor/slick/slick.css') }}"/>
     <link rel="stylesheet" href="{{ asset('vendor/slick/slick-theme.css') }}"/>
     <link rel="stylesheet" href="{{ asset('vendor/slider/src/jquery.skidder.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
+    {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/dataTables.bootstrap4.min.css') }}">
     <link rel="stylesheet"
           href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
     <link rel="stylesheet"
           href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
+    {% elseif is_granted('ROLE_SELLER') %}
+    <link rel="stylesheet" href="{{ asset('vendor/pagination/simplePagination.css') }}"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    {% endif %}
     <style>
         .centered_container {
             position: absolute;
@@ -88,43 +93,112 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('vendor/toastr/toastr.js') }}"></script>
-    <script src="{{ asset('bundles_js/chartist.bundle.js') }}"></script>
     <script src="{{ asset('bundles_js/knob.bundle.js') }}"></script>
-    <script src="{{ asset('js/index.js') }}"></script>
     <script src="{{ asset('vendor/slick/slick.min.js') }}"></script>
+    <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
+    <script src="{{ asset('bundles_js/chartist.bundle.js') }}"></script>
+    {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
     <script src="{{ asset('bundles_js/datatablescripts.bundle.js') }}"></script>
     <script src="{{ asset('vendor/jquery-datatable/buttons/dataTables.buttons.min.js') }}"></script>
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.bootstrap4.min.js') }}"></script>
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.colVis.min.js') }}"></script>
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.html5.min.js') }}"></script>
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
-    <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
     <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
-    {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
     {% elseif is_granted('ROLE_SELLER') %}
+        <script src="{{ asset('js/tools.js') }}"></script>
+        <script src="{{ asset('js/external/moment.min.js') }}"></script>
+        <script src="{{ asset('vendor/pagination/jquery.simplePagination.js') }}"></script>
         <script>
-          $('.engage').click( function(e){
-            user_id = $('td:nth-child(3)', $(e.target).parents('tr')).text();
-            user_name = $('td:nth-child(1)', $(e.target).parents('tr')).text();
-            swal({
-                title: "确定负责这个用户吗？",
-                text: "用户姓名："+user_name,
-                type: "info",
-                showCancelButton: true,
-                confirmButtonColor: "#17a2b8",
-                confirmButtonText: "负责",
-                cancelButtonText: "取消"
-            }, function() {
-                $.ajax({
-                    url: '/service/attach_user',
-                    type: 'POST',
-                    dataType: 'json',
-                    data: JSON.stringify({'user_id': user_id, 'seller_id': {{ seller.user_id }}}),
+            function insert_records_1(records, record_table){
+                i = 0;
+                for (i in records){
+                    let row = record_table.find('.copy_source').clone().removeAttr('class style');
+                    let columns = row.children('td');
+                    columns.eq(0).html( '<a href="/user/show/'+ records[i]['user_id']+ '&user">' + records[i]['lastname'] + ' ' + records[i]['firstname']+ '</a>');  // full_name
+                    columns.eq(1).text(records[i]['sex'] === '1' ? "{{ 'user_infos.sex.1'|trans }}" : "{{ 'user_infos.sex.0'|trans }}");  // sex
+                    columns.eq(2).text(records[i]['user_id']); // userid
+                    columns.eq(3).text(records[i]['phone']); // phone
+                    columns.eq(4).text(records[i]['wechat']); // wechat
+                    columns.eq(5).text(records[i]['address']); // address
+                    columns.eq(6).text(translate('region.'+records[i]['region'])); // user_region
+                    columns.eq(7).text(moment(new Date(records[i]['date_register'])).format('YYYY-MM-DD')); // date_register
+                    row.appendTo(record_table.find('tbody'));
+                }
+            }
+
+            function insert_records_2(records, record_table){
+                i = 0;
+                for (i in records){
+                    let row = record_table.find('.copy_source').clone().removeAttr('class style');
+                    let columns = row.children('td');
+                    columns.eq(0).html( '<a href="/user/show/'+ records[i]['user_id']+ '&user">' + records[i]['lastname'] + ' ' + records[i]['firstname']+ '</a>');  // full_name
+                    columns.eq(1).text(records[i]['sex'] === '1' ? "{{ 'user_infos.sex.1'|trans }}" : "{{ 'user_infos.sex.0'|trans }}");  // sex
+                    columns.eq(2).text(records[i]['user_id']); // userid
+                    columns.eq(3).text(records[i]['phone']); // phone
+                    columns.eq(4).text(records[i]['wechat']); // wechat
+                    columns.eq(5).text(records[i]['address']); // address
+                    columns.eq(6).text(moment(new Date(records[i]['date_register'])).format('YYYY-MM-DD')); // date_register
+                    row.appendTo(record_table.find('tbody'));
+                }
+            }
+
+        $(document).ready(function () {
+            let table_name = 'User';
+            let page_number = "1";
+            let sort_field = "lastname";
+            let sort_order = null;
+            let count = "10";
+            let where_clause_1 = "user_id LIKE '1%' AND region = '{{ seller.region }}' AND responsible_id IS NULL";
+            let where_clause_2 = "user_id LIKE '1%' AND responsible_id = {{ seller.user_id }}";
+
+            $('#record_table_1').renderTable(table_name, page_number, sort_field, sort_order, count, where_clause_1, insert_records_1);
+
+            $('#record_table_2').renderTable(table_name, page_number, sort_field, sort_order, count, where_clause_2, insert_records_2);
+
+            $(document).on('click', '.engage', function (e) {
+                let user_id = $('td:nth-child(3)', $(e.target).parents('tr')).text();
+                let user_name = $('td:nth-child(1)', $(e.target).parents('tr')).text();
+                swal({
+                    title: "确定负责这个用户吗？",
+                    text: "用户姓名："+user_name,
+                    type: "info",
+                    showCancelButton: true,
+                    confirmButtonColor: "#17a2b8",
+                    confirmButtonText: "负责",
+                    cancelButtonText: "取消"
+                }, function() {
+                    $.ajax({
+                        url: '/service/attach_user/action=engage&user_id='+user_id+'&seller_id='+{{ seller.user_id }},
+                        type: 'POST',
+                    });
+                    location.reload();
                 });
-                location.reload();
             });
-          });
+
+            $(document).on('click', '.dismiss', function (e) {
+                let user_id = $('td:nth-child(3)', $(e.target).parents('tr')).text();
+                let user_name = $('td:nth-child(1)', $(e.target).parents('tr')).text();
+                swal({
+                    title: "确定解除这个用户吗？",
+                    text: "用户姓名："+user_name,
+                    type: "info",
+                    showCancelButton: true,
+                    confirmButtonColor: "#b8071d",
+                    confirmButtonText: "解除",
+                    cancelButtonText: "取消"
+                }, function() {
+                    $.ajax({
+                        url: '/service/attach_user/action=dismiss&user_id='+user_id+'&seller_id='+{{ seller.user_id }},
+                        type: 'POST',
+                    });
+                    location.reload();
+                });
+            });
+        });
         </script>
+
+
     {% elseif is_granted('ROLE_USER') %}
         <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="{{ asset('vendor/slider/js/imagesloaded.js') }}"></script>
