--- a/templates/tracking/index.html.twig
+++ b/templates/tracking/index.html.twig
@@ -4,11 +4,9 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/dataTables.bootstrap4.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('vendor/pagination/simplePagination.css') }}"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
-    <link rel="stylesheet" href="{{ asset('css/popup_box.css') }}"/>
 {% endblock %}
 {% block sidebar %}
     {% set tab_menu_index, tab_menu_profile, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, tab_admin_histo, nav_menu, nav_admin = "", "", "active", "", "", "", "", "", "active", "" %}
@@ -168,56 +166,38 @@
                             <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.add_batch'|trans }}
                         </a>
                         {% endif %}
-                            <div class="table-responsive">
-                                <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
+                            <div id="record_table" class="table-responsive">
+                                <table class="table table-bordered table-striped table-hover text-nowrap">
                                     <thead>
-                                    <tr>
-                                        <th>{{ 'tracking_page.tracking_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.product_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.production_date' | trans }}</th>
-                                        <th>{{ 'tracking_page.batch_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.starting_time' | trans }}</th>
-                                        <th>{{ 'tracking_page.ranch_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.factory' | trans }}</th>
-                                        {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
-                                        <th>{{ 'product_page.action' | trans }}</th>
-                                        {% endif %}
-                                    </tr>
+                                        <tr>
+                                            <th class="sortable" sortfield="tracking_id">{{ 'tracking_page.tracking_id'|trans }}</th>
+                                            <th class="sortable" sortfield="product_id">{{ 'tracking_page.product_id'|trans }}</th>
+                                            <th class="sortable" sortfield="production_date">{{ 'tracking_page.production_date'|trans }}</th>
+                                            <th class="sortable" sortfield="batch_id">{{ 'tracking_page.batch_id'|trans }}</th>
+                                            <th class="sortable" sortfield="starting_time">{{ 'tracking_page.starting_time'|trans }}</th>
+                                            <th class="sortable" sortfield="ranch_id">{{ 'tracking_page.ranch_id'|trans }}</th>
+                                            <th class="sortable" sortfield="factory">{{ 'tracking_page.factory'|trans }}</th>
+                                            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
+                                            <th>{{ 'product_page.action' | trans }}</th>
+                                            {% endif %}
+                                        </tr>
                                     </thead>
-                                    <tfoot>
-                                    <tr>
-                                        <th>{{ 'tracking_page.tracking_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.product_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.production_date' | trans }}</th>
-                                        <th>{{ 'tracking_page.batch_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.starting_time' | trans }}</th>
-                                        <th>{{ 'tracking_page.ranch_id' | trans }}</th>
-                                        <th>{{ 'tracking_page.factory' | trans }}</th>
-                                        {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
-                                        <th>{{ 'product_page.action' | trans }}</th>
-                                        {% endif %}
-                                    </tr>
-                                    </tfoot>
                                     <tbody>
-                                        {% for t in product_trackings %}
-                                            <tr class="gradeA">
-                                                <td><a href="/tracking/{{ t.TrackingId }}&tracking" >{{ t.TrackingId }}</a></td>
-                                                <td><a href="/product/show/{{ t.ProductId }}&product" >{{ t.ProductId }}</a></td>
-                                                <td>{{ t.ProductionDate|date('Y年m月d日h:m:s') }}</td>
-                                                <td><a href="/tracking/batch_show/{{ t.BatchId }}&batch_show" >{{ t.BatchId }}</a></td>
-                                                <td>{{ t.StartingTime|date('Y年m月d日h:m:s') }}</td>
-                                                <td>{{ t.RanchId }}</td>
-                                                <td>{{ t.Factory }}</td>
-                                                {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
-                                                <td class="actions">
-                                                <a class="btn btn-info modify_btn_tracking">
-                                                    <i class="fa fa-edit"></i></a>
-                                                <a href="/tracking/delete/{{ t.TrackingId }}&product" class="btn btn-danger delete_product_confirm" title="Delete">
-                                                    <i class="fa fa-trash-o"></i></a>
-                                                </td>
-                                                {% endif %}
-                                            </tr>
-                                        {% endfor %}
+                                        <tr class="copy_source" style="display: none">
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
+                                            <td>
+                                                <a class="btn btn-info modify_btn_tracking"><i class="fa fa-edit"></i></a>
+                                                <a class="btn btn-danger delete_tracking_confirm"><i class="fa fa-trash"></i></a>
+                                            </td>
+                                            {% endif %}
+                                        </tr>
                                     </tbody>
                             </table>
                         </button>
@@ -231,15 +211,30 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('bundles_js/datatablescripts.bundle.js') }}"></script>
-    <script src="{{ asset('vendor/jquery-datatable/buttons/dataTables.buttons.min.js') }}"></script>
-    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.bootstrap4.min.js') }}"></script>
-    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.colVis.min.js') }}"></script>
-    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.html5.min.js') }}"></script>
-    <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
     <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
-    <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
+    <script src="{{ asset('js/tools.js') }}"></script>
+    <script src="{{ asset('js/external/moment.min.js') }}"></script>
+    <script src="{{ asset('vendor/pagination/jquery.simplePagination.js') }}"></script>
     <script>
+        function insert_records(records, record_table){
+            i = 0;
+            for (i in records){
+                let row = record_table.find('.copy_source').clone().removeAttr('class style');
+                let columns = row.children('td');
+                columns.eq(0).html('<a href="/tracking/'+records[i]['tracking_id']+'&tracking" >'+ records[i]['tracking_id'] +'</a>');
+                columns.eq(1).html('<a href="/product/show/'+records[i]['product_id']+'&product" >'+ records[i]['product_id'] +'</a>');
+                columns.eq(2).text(moment(new Date(records[i]['production_date'])).format('YYYY-MM-DD'));
+                columns.eq(3).html('<a href="/tracking/batch_show/'+records[i]['batch_id']+'&batch_show" >'+ records[i]['batch_id'] +'</a>');
+                columns.eq(4).text(moment(new Date(records[i]['starting_time'])).format('YYYY-MM-DD HH:MM:SS'));
+                columns.eq(5).text(records[i]['ranch_id']);
+                columns.eq(6).text(records[i]['factory']);
+                {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
+                columns.eq(7).children('a').eq(1).attr("href", "/tracking/delete/"+ records[i]['tracking_id'] + "&product"); // delete button
+                {% endif %}
+                row.appendTo(record_table.find('tbody'));
+            }
+        }
+
         function readURL(input) {
           if (input.files && input.files[0]) {
             let reader = new FileReader();
@@ -318,9 +313,6 @@
             $('#popupContent').fadeOut('fast');
         });
 
-
-
-
         $('#addbatch').click(function () {
             $('#tracking_form_title').text('{{ 'tracking_page.batch_register'|trans }}');
             $('#product_tracking_batch_number').val('');
@@ -363,10 +355,7 @@
         });
 
 
-
-
-
-        $('.modify_btn_tracking').click(function (e) {
+        $(document).on('click', '.modify_btn_tracking', function (e) {
             data = {"tracking_id":  $('td:first-child', $(e.target).parents('tr')).text()};
             $.ajax({
                 url: '/tracking/modify',
@@ -487,8 +476,18 @@
                 }
             });
         });
-     $(document).ready(function () {
-            $('.delete_product_confirm').click(function (e) {
+
+        $(document).ready(function () {
+            let table_name = 'product_tracking';
+            let page_number = "1";
+            let sort_field = "tracking_id";
+            let sort_order = null;
+            let count = "10";
+            let where_clause = null;
+
+            $('#record_table').renderTable(table_name, page_number, sort_field, sort_order, count, where_clause, insert_records);
+
+            $(document).on('click', '.delete_tracking_confirm', function (e) {
                 e.preventDefault();
                 var linkURL = $(this).attr("href");
                 confirmBeforeRedirect(linkURL);
@@ -505,8 +504,8 @@
                 }, function () {
                     window.location.href = linkURL;
                 });
-            };
-        })
+            }
+        });
 
     </script>
 
